--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "symfony/serializer": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
         "symfony/validator": "7.2.*",
-        "symfony/yaml": "7.2.*"
+        "symfony/yaml": "7.2.*",
+      "ext-calendar": "*"
     },
     "config": {
         "allow-plugins": {
